--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <title>BookTime</title>
+    <!-- Booktime version: {{ VERSION }} -->
+    <script charset="utf-8">
+        var tracker_id = {{ GA_TRACKER_ID }};
+    </script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
